# ProyectoFinal

Case/: Cajita Proyecto Final.rar  CaseBase.20240627-163809.FCBak  CaseBase.FCStd  Parte Inferior - Base.stl  Parte Superior - Tapa.stl
Firmware v0.1/: CMakeLists.txt  Readme.md  communication.c  communication.h  configuration.c  configuration.h  main.c  sampling.c  sampling.h  test.txt  triggered_analog.pio  triggered_digital.pio  untriggered_analog.pio  untriggered_digital.pio
GUI v0.1/src/: GUI.py  Icons.qrc  Icons_rc.py  communication.py  compile and run.bat  main.py  mainwindow.ui  plotting.py  protocolAnalysis.py  protocolAnalyzerUI.py  protocolAnalyzerUI.ui  rc_icons.py  settings.py  test.py  test2.py  ui_mainwindow.py  ui_protocolAnalyzerUI.py
GUI v0.1/test/: TEST.PY
Informe/circuitos/comparador op amp/: comparador op amp.kicad_prl  comparador op amp.kicad_pro  comparador op amp.kicad_sch
Intento USB/: CMakeLists.txt
Placas/Adaptador ADC1175-50/: Adaptador ADC1175-50.kicad_pcb  Adaptador ADC1175-50.kicad_prl  Adaptador ADC1175-50.kicad_pro  Adaptador ADC1175-50.kicad_sch
Placas/Adaptador MAX9108/: Adaptador MAX9108.kicad_pcb  Adaptador MAX9108.kicad_prl  Adaptador MAX9108.kicad_pro  Adaptador MAX9108.kicad_sch
Placas/Adaptador MCP4821/Adaptador MCP4821/: Adaptador MCP4821.kicad_pcb  Adaptador MCP4821.kicad_prl  Adaptador MCP4821.kicad_pro  Adaptador MCP4821.kicad_sch
Placas/Adaptador SOIC-20/Adaptador SN74LVTH245A/: Adaptador SN74LVTH245A.kicad_pcb  Adaptador SN74LVTH245A.kicad_prl  Adaptador SN74LVTH245A.kicad_pro  Adaptador SN74LVTH245A.kicad_sch  fp-info-cache
Placas/Adaptador SOT-23-5/Adaptador SOT-23-5/: Adaptador SOT-23-5.kicad_pcb  Adaptador SOT-23-5.kicad_prl  Adaptador SOT-23-5.kicad_pro  Adaptador SOT-23-5.kicad_sch
Placas/Adaptador SOT-23/Adaptador SOT-23/: Adaptador SOT-23.kicad_pcb  Adaptador SOT-23.kicad_prl  Adaptador SOT-23.kicad_pro  Adaptador SOT-23.kicad_sch
Placas/Atenuadores L/: Atenuadores L.kicad_pcb  Atenuadores L.kicad_prl  Atenuadores L.kicad_pro  Atenuadores L.kicad_sch
Placas/Placa Definitiva/v0.1/: fp-info-cache  v0.1.csv  v0.1.kicad_pcb  v0.1.kicad_prl  v0.1.kicad_pro  v0.1.kicad_sch  v0.1.xml
Placas/Placa Definitiva/v0.2/: fp-info-cache  fp-lib-table  v0.2.kicad_pcb  v0.2.kicad_prl  v0.2.kicad_pro  v0.2.kicad_sch
Placas/Placa Definitiva/v0.3/: v0.3.csv  v0.3.kicad_pcb  v0.3.kicad_prl  v0.3.kicad_pro  (+2 more)
test programs/CLKGEN en 8 pines - Copy/: CMakeLists.txt  clock.pio  main.c
test programs/I2CMaster/: I2CMaster.ino
test programs/I2CSlave/: I2CSlave.ino
test programs/SPIMaster/: SPIMaster.ino
test programs/SPISlave/: SPISlave.ino
test programs/Square_wave/: Square_wave.ino
test programs/UARTMaster/: UARTMaster.ino
test programs/UARTSlave/: UARTSlave.ino
(+22 files in other folders)
